begins to cut and reorg material

--- a/script-1.scriv/Settings/ui.plist
+++ b/script-1.scriv/Settings/ui.plist
@@ -197,7 +197,7 @@
 	<key>mainDocumentEditor.rulerIsVisible</key>
 	<false/>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 416.33333333333331}, {620, 588.66666666666674}}</string>
+	<string>{{0, 0}, {620, 588.66666666666663}}</string>
 	<key>mainDocumentEditor.selectedRanges</key>
 	<string>{0, 0}</string>
 	<key>mainDocumentEditor.textEditorState</key>
